Java Projects/FallingSand/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;\\dist113\dhs_stud\DHSStudent\191sachsb\Desktop\FallingSand
-d
\\dist113\dhs_stud\DHSStudent\191sachsb\Desktop\FallingSand\doc
-encoding
windows-1252
-charset
windows-1252
\\dist113\dhs_stud\DHSStudent\191sachsb\Desktop\FallingSand\SandLab.java
<---- end of javadoc command ---->
Loading source file \\dist113\dhs_stud\DHSStudent\191sachsb\Desktop\FallingSand\SandLab.java...
\\dist113\dhs_stud\DHSStudent\191sachsb\Desktop\FallingSand\SandLab.java:26: error: ']' expected
    names[SAND
              ^
\\dist113\dhs_stud\DHSStudent\191sachsb\Desktop\FallingSand\SandLab.java:26: error: not a statement
    names[SAND
         ^
\\dist113\dhs_stud\DHSStudent\191sachsb\Desktop\FallingSand\SandLab.java:27: error: illegal start of expression
    grid = new int[numRows][numCols];
         ^
\\dist113\dhs_stud\DHSStudent\191sachsb\Desktop\FallingSand\SandLab.java:27: error: ';' expected
    grid = new int[numRows][numCols];
          ^
\\dist113\dhs_stud\DHSStudent\191sachsb\Desktop\FallingSand\SandLab.java:27: error: ']' expected
    grid = new int[numRows][numCols];
                   ^
\\dist113\dhs_stud\DHSStudent\191sachsb\Desktop\FallingSand\SandLab.java:27: error: ';' expected
    grid = new int[numRows][numCols];
                          ^
\\dist113\dhs_stud\DHSStudent\191sachsb\Desktop\FallingSand\SandLab.java:27: error: not a statement
    grid = new int[numRows][numCols];
                            ^
\\dist113\dhs_stud\DHSStudent\191sachsb\Desktop\FallingSand\SandLab.java:27: error: ';' expected
    grid = new int[numRows][numCols];
                                   ^
8 errors
